test_suite/tests/ui/structure/self_type.stderr
error: mapping over type with associated item is not supported
 --> tests/ui/structure/self_type.rs:8:16
  |
8 | struct Test<T>(<T as TestTrait>::Assoc)
  |                ^^^^^^^^^^^^^^^^^^^^^^^
